tests/rosetta/out/Smalltalk/checkpoint-synchronization-2.out
/tmp/checkpoint-synchronization-2.st:7: parse error, expected ']'
